mysqldb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqldb
  name: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqldb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/project1: "true"
        io.kompose.service: mysqldb
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: password
          image: mysql:latest
          name: mysqldb
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/database.sql
              name: mysqldb-claim
      restartPolicy: Always
      volumes:
        - name: mysqldb-claim
          persistentVolumeClaim:
            claimName: mysqldb-claim
status: {}
