analysis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: analysis
  name: analysis
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
  selector:
    io.kompose.service: analysis
status:
  loadBalancer: {}
